--- a/app/src/main/translations/ar.yaml
+++ b/app/src/main/translations/ar.yaml
@@ -18,6 +18,8 @@ settings_filter_expensive: إخفاء المحطات الغالية والبعي
 settings_filter_expensive_summary: لا تعرض المحطات إذا كانت هناك محطات أقرب أو أرخص. (موصى به)
 settings_filter_non_public: الأسعار العامة فقط
 settings_filter_non_public_summary: إخفاء الأسعار التي تتطلب اشتراك
+settings_filter_beyond_sea: اخفاء محطات الوقود على الجانب الآخر من البحر
+settings_filter_beyond_sea_summary: عرض فقط تلك الموجودة في منطقتك (شبه الجزيرة، جزر البليار، جزر الكناري أو سبتة ومليلية)
 settings_filter_closed: إظهار المحطات المغلقة
 settings_filter_closed_summary: اضبط فترة زمنية للمحطات التي ستفتح قريبًا
 settings_filter_closed_tolerance_none: بدون فترة، دائمًا الفلترة
