--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -20,6 +20,8 @@
     <string name="settings_filter_expensive_summary">No les mostris si n\'hi ha de més properes o barates. (Recomanat)</string>
     <string name="settings_filter_non_public">Només preus públics</string>
     <string name="settings_filter_non_public_summary">Oculta preus que demanin afiliació.</string>
+    <string name="settings_filter_beyond_sea">Oculta benzineres a l\'altre costat del mar</string>
+    <string name="settings_filter_beyond_sea_summary">Mostra només les que estiguin a la teva zona (Península, Balears, Canàries o Ceuta i Melilla)</string>
     <string name="settings_filter_closed">Mostra tancades si obren</string>
     <string name="settings_filter_closed_summary">Establir un marge de temps per estacions que obriran aviat</string>
     <string name="settings_filter_closed_tolerance_none">Sense marge, oculta sempre</string>
