--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -20,6 +20,8 @@
     <string name="settings_filter_expensive_summary">Ez erakutsi geltokirik hurbilago eta merkeago dagoen beste bat baldin badago. (Gomendatua)</string>
     <string name="settings_filter_non_public">Prezio publikoak bakarrik erakutsi</string>
     <string name="settings_filter_non_public_summary">Ezkutatu bazkidetza edo beste edozer eskatzen duten prezioak.</string>
+    <string name="settings_filter_beyond_sea">Itsas bestaldeko gasolindegiak ezkutatu</string>
+    <string name="settings_filter_beyond_sea_summary">Zure zonan daudenak bakarrik erakutsi (Penintsula, Balear Uharteak, Kanariko Uharteak edo Ceuta eta Melilla)</string>
     <string name="settings_filter_closed">Erakutsi itxitako estazioak</string>
     <string name="settings_filter_closed_summary">Ezarri denbora-tarte bat laster irekiko diren geltokietarako</string>
     <string name="settings_filter_closed_tolerance_none">Marjinarik gabe, beti filtro</string>
