--- a/app/src/main/translations/en.yaml
+++ b/app/src/main/translations/en.yaml
@@ -18,6 +18,8 @@ settings_filter_expensive: Hide expensive and further stations
 settings_filter_expensive_summary: Do not show an station if another nearer and cheaper exist. (Recommended)
 settings_filter_non_public: Show only public prices
 settings_filter_non_public_summary: Hide prices requiring membership or anything else.
+settings_filter_beyond_sea: Hide stations beyond the sea
+settings_filter_beyond_sea_summary: Show only those in your zone (Peninsula, Balearic Islands, Canary Islands, or Ceuta and Melilla)
 settings_filter_closed: Show closed stations
 settings_filter_closed_summary: Set a time margin for stations that will open soon
 settings_filter_closed_tolerance_none: No margin, always filter
