--- a/meta/translations/en.yaml
+++ b/meta/translations/en.yaml
@@ -4,20 +4,15 @@
 project_name: Carburoid
 splash_motto: Fill up cheaper, closer
 short_description: Find Spanish gas stations by price and distance.
-full_description_md: |+
-  Features:
+full_description_md: |-
+  Features
 
-  - Uses official data sent by gas stations to the Ministry of Industry of Spain
-  - Show only relevant gas stations: either closer or cheaper than others
-  - Discards stations without your product
-  - Discards closed stations unless they open soon
-  - Stations opening or closing soon are not used to discard others, just in case you get there late or early
-  - See discarded stations by disabling any filtering criteria
-  - Station list and station detail views
-  - Open a station location in your chosen map application
-  - Translations to Spanish, Catalan, Basque, Galician, Aragonese...
-  - Dark and Light themes
-
+  - 🏛️ Up-to-date gas station data provided by the Ministry of Industry of Spain
+  - 🎯 Only relevant gas stations: either closer or cheaper than others
+  - 🕒 Smart about opening and closing hours
+  - 🗺️ Integrates with your preferred map application
+  - 🌐 Translations available in Spanish, Catalan, Basque, Galician, Aragonese...
+  - ☀️ Dark and Light themes
 keywords: gas station, petrol, gasoline, gasoil, diesel
 changes_1_2_3_md: "- \U0001F484 Less anoying data spinner for data refreshing\n- \U0001F310
   Spanish contained untranslated Catalan words (Fixes #4)\n    - Thanks to wuniversales
