--- a/meta/translations/es.yaml
+++ b/meta/translations/es.yaml
@@ -7,8 +7,8 @@ full_description_md: |+
   - 🏛️ Datos actualizados del Ministerio de Industria
   - 🎯 Solo gasolineras relevantes: o más cercanas o más baratas que otras
   - 🕒 Considera los horarios de apertura
-  - 🗺️ Se integra con la aplicació de mapas que uses
-  - 🌐 Traducciones al Español, Catalan, Vasco, Gallego, Aragonés...
+  - 🗺️ Se integra con la aplicación de mapas que uses
+  - 🌐 Traducciones al Español, Catalán, Vasco, Gallego, Aragonés...
   - ☀️ Temas oscuro y claro
 
 keywords: gasolinera, estación de servicio, combustible, carburante, gasoil, diesel, gasolina
