--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -14,8 +14,8 @@ theme_light: Claro
 theme_dark: Oscuro
 theme_system: Automático (Sistema)
 settings_category_station_filters: Filtrado de gasolineras
-settings_filter_expensive: Oculta gasolineras caras y lejanas
-settings_filter_expensive_summary: No muestres gasolineras cuando las haya más cercanas o más baratas. (Recomendado)
+settings_filter_expensive: Ocultar irrelevantes
+settings_filter_expensive_summary: Una gasolinera se considera irrelevante si hay otra más cercana y más barata. (Recomendado)
 settings_filter_non_public: Sólo precios públicos
 settings_filter_non_public_summary: Oculta los precios que requieran afiliación.
 settings_filter_beyond_sea: Oculta gasolineras al otro lado del mar
