--- a/app/src/main/res/values-an/strings.xml
+++ b/app/src/main/res/values-an/strings.xml
@@ -16,8 +16,8 @@
     <string name="theme_dark">Fosco</string>
     <string name="theme_system">Automatico (O d\'o sistema)</string>
     <string name="settings_category_station_filters">Filtro de gasolineras</string>
-    <string name="settings_filter_expensive">Amagar estacions cara y lejanas</string>
-    <string name="settings_filter_expensive_summary">No amostrar estacions si n\'i ha d\'as más cercanas u baratas. (Recomendau)</string>
+    <string name="settings_filter_expensive">Amagar irrelevantes</string>
+    <string name="settings_filter_expensive_summary">Una gasolinera se considera irrelevante si n\'i hai bella atro que sía más preta y más barata. (Recomendau)</string>
     <string name="settings_filter_non_public">Nomás preus públicos</string>
     <string name="settings_filter_non_public_summary">Amagar preus que demanden afiliación.</string>
     <string name="settings_filter_beyond_sea">Amaga gasolineras al otro lado d\'o mar</string>
