--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -16,8 +16,8 @@
     <string name="theme_dark">Fosc</string>
     <string name="theme_system">Automàtic (El del sistema)</string>
     <string name="settings_category_station_filters">Filtrat de benzineres</string>
-    <string name="settings_filter_expensive">Amaga les cares i llunyanes</string>
-    <string name="settings_filter_expensive_summary">No les mostris si n\'hi ha de més properes i barates. (Recomanat)</string>
+    <string name="settings_filter_expensive">Amaga les irrelevants</string>
+    <string name="settings_filter_expensive_summary">Una benzinera es considera irrelevant si n\'hi ha cap altra de més propera i barata. (Recomanat)</string>
     <string name="settings_filter_non_public">Només preus públics</string>
     <string name="settings_filter_non_public_summary">Amaga preus que demanin afiliació.</string>
     <string name="settings_filter_beyond_sea">Amaga benzineres a l\'altre costat del mar</string>
