--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -16,8 +16,8 @@
     <string name="theme_dark">Iluna</string>
     <string name="theme_system">Auto (Sistema lehenetsia)</string>
     <string name="settings_category_station_filters">Estazioko iragazkiak</string>
-    <string name="settings_filter_expensive">Ezkutatu geltoki garestiak eta urrunago</string>
-    <string name="settings_filter_expensive_summary">Ez erakutsi geltokirik hurbilago eta merkeago dagoen beste bat baldin badago. (Gomendatua)</string>
+    <string name="settings_filter_expensive">Ezkutatu garrantzigabeak</string>
+    <string name="settings_filter_expensive_summary">Gune bat garrantzigabetzat hartzen da beste bat badago hurbilagoa eta merkeagoa. (Gomendatua)</string>
     <string name="settings_filter_non_public">Prezio publikoak bakarrik erakutsi</string>
     <string name="settings_filter_non_public_summary">Ezkutatu bazkidetza edo beste edozer eskatzen duten prezioak.</string>
     <string name="settings_filter_beyond_sea">Itsas bestaldeko gasolindegiak ezkutatu</string>
