--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="theme_dark">Dark</string>
     <string name="theme_system">Auto (System Default)</string>
     <string name="settings_category_station_filters">Station filters</string>
-    <string name="settings_filter_expensive">Hide expensive and further stations</string>
-    <string name="settings_filter_expensive_summary">Do not show an station if another nearer and cheaper exist. (Recommended)</string>
+    <string name="settings_filter_expensive">Hide irrelevant stations</string>
+    <string name="settings_filter_expensive_summary">A station is considered irrelevant if any other exists that is nearer and cheaper. (Recommended)</string>
     <string name="settings_filter_non_public">Show only public prices</string>
     <string name="settings_filter_non_public_summary">Hide prices requiring membership or anything else.</string>
     <string name="settings_filter_beyond_sea">Hide stations beyond the sea</string>
