--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -14,8 +14,8 @@ theme_light: Claro
 theme_dark: Fosco
 theme_system: Automatico (O d'o sistema)
 settings_category_station_filters: Filtro de gasolineras
-settings_filter_expensive: Amagar estacions cara y lejanas
-settings_filter_expensive_summary: No amostrar estacions si n'i ha d'as más cercanas u baratas. (Recomendau)
+settings_filter_expensive: Amagar irrelevantes
+settings_filter_expensive_summary: Una gasolinera se considera irrelevante si n'i hai bella atro que sía más preta y más barata. (Recomendau)
 settings_filter_non_public: Nomás preus públicos
 settings_filter_non_public_summary: Amagar preus que demanden afiliación.
 settings_filter_beyond_sea: Amaga gasolineras al otro lado d'o mar
