--- a/app/src/main/translations/ar.yaml
+++ b/app/src/main/translations/ar.yaml
@@ -14,8 +14,8 @@ theme_light: فاتح
 theme_dark: غامق
 theme_system: تلقائي (النظام)
 settings_category_station_filters: تصفية محطات الوقود
-settings_filter_expensive: إخفاء المحطات الغالية والبعيدة
-settings_filter_expensive_summary: لا تعرض المحطات إذا كانت هناك محطات أقرب أو أرخص. (موصى به)
+settings_filter_expensive: اخفي مش ذات صلة
+settings_filter_expensive_summary: تعتبر المحطة مش ذات صلة إذا كانت كاين غيرها أقرب وبأسعار أرخص. (موصى به)
 settings_filter_non_public: الأسعار العامة فقط
 settings_filter_non_public_summary: إخفاء الأسعار التي تتطلب اشتراك
 settings_filter_beyond_sea: اخفاء محطات الوقود على الجانب الآخر من البحر
