--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -14,8 +14,8 @@ theme_light: Clar
 theme_dark: Fosc
 theme_system: Automàtic (El del sistema)
 settings_category_station_filters: Filtrat de benzineres
-settings_filter_expensive: Amaga les cares i llunyanes
-settings_filter_expensive_summary: No les mostris si n'hi ha de més properes i barates. (Recomanat)
+settings_filter_expensive: Amaga les irrelevants
+settings_filter_expensive_summary: Una benzinera es considera irrelevant si n'hi ha cap altra de més propera i barata. (Recomanat)
 settings_filter_non_public: Només preus públics
 settings_filter_non_public_summary: Amaga preus que demanin afiliació.
 settings_filter_beyond_sea: Amaga benzineres a l'altre costat del mar
