--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -14,8 +14,8 @@ theme_light: Argia
 theme_dark: Iluna
 theme_system: Auto (Sistema lehenetsia)
 settings_category_station_filters: Estazioko iragazkiak
-settings_filter_expensive: Ezkutatu geltoki garestiak eta urrunago
-settings_filter_expensive_summary: Ez erakutsi geltokirik hurbilago eta merkeago dagoen beste bat baldin badago. (Gomendatua)
+settings_filter_expensive: Ezkutatu garrantzigabeak
+settings_filter_expensive_summary: Gune bat garrantzigabetzat hartzen da beste bat badago hurbilagoa eta merkeagoa. (Gomendatua)
 settings_filter_non_public: Prezio publikoak bakarrik erakutsi
 settings_filter_non_public_summary: Ezkutatu bazkidetza edo beste edozer eskatzen duten prezioak.
 settings_filter_beyond_sea: Itsas bestaldeko gasolindegiak ezkutatu
