--- a/meta/translations/ca.yaml
+++ b/meta/translations/ca.yaml
@@ -11,4 +11,12 @@ full_description_md: |+
   - 🌐 Traduccions a l'Espanyol, Català, Basc, Gallec, Aragonés...
   - ☀️ Temes fosc i clar
 
-keywords: benzinera, estació de servei, combustible, carburant, gasoil, diesel, gasolina
+  Carburoid mostra només les benzineres que mereixen consideració.
+  Amaga una benzinera si n’hi ha una altra que és més barata i més a prop.
+  Això redueix la llista de desenes de milers a només unes quantes dotzenes d’opcions rellevants.
+
+  La primera que surt és la més propera.
+  Segons baixes, el preu es redueix però també estan més lluny.
+  Pots parar quan la distància ja no et compensi l'estalvi.
+
+keywords: benzinera, estació de servei, combustible, carburant, gasoil, diesel, gasolina, benzina
